[gd_scene load_steps=3 format=3 uid="uid://28rvh8ysd778"]

[ext_resource type="Script" path="res://scripts/PlayerPersonalisationScene.gd" id="1_1vx87"]
[ext_resource type="Theme" uid="uid://ncsyvbfrm621" path="res://SecondaryButtonTheme.tres" id="2_38lr4"]

[node name="PlayerPersonalisationScene" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_1vx87")

[node name="Background" type="ColorRect" parent="."]
custom_minimum_size = Vector2(1920, 1080)
layout_mode = 0
offset_right = 40.0
offset_bottom = 40.0
color = Color(0, 0.462745, 0.505882, 1)

[node name="TitleLabel" type="Label" parent="."]
custom_minimum_size = Vector2(1920, 80)
layout_mode = 0
offset_right = 40.0
offset_bottom = 23.0
theme = ExtResource("2_38lr4")
theme_override_font_sizes/font_size = 60
text = "PLAYER PERSONALISATION"
horizontal_alignment = 1

[node name="AvatarCustomizerContainer" type="Control" parent="."]
custom_minimum_size = Vector2(1920, 900)
anchors_preset = 0
offset_top = 180.0
offset_right = 1920.0
offset_bottom = 1080.0

[node name="ScrollContainer" type="ScrollContainer" parent="."]
visible = false
custom_minimum_size = Vector2(1920, 720)
layout_mode = 0
offset_top = 240.0
offset_right = 1920.0
offset_bottom = 720.0

[node name="AvatarGrid" type="GridContainer" parent="ScrollContainer"]
custom_minimum_size = Vector2(1920, 720)
layout_mode = 2
columns = 4

[node name="AvatarButton1" type="TextureButton" parent="ScrollContainer/AvatarGrid"]
custom_minimum_size = Vector2(480, 480)
layout_mode = 2
ignore_texture_size = true
stretch_mode = 4

[node name="AvatarButton2" type="TextureButton" parent="ScrollContainer/AvatarGrid"]
custom_minimum_size = Vector2(480, 480)
layout_mode = 2
ignore_texture_size = true
stretch_mode = 4

[node name="AvatarButton3" type="TextureButton" parent="ScrollContainer/AvatarGrid"]
custom_minimum_size = Vector2(480, 480)
layout_mode = 2
ignore_texture_size = true
stretch_mode = 4

[node name="AvatarButton4" type="TextureButton" parent="ScrollContainer/AvatarGrid"]
custom_minimum_size = Vector2(480, 480)
layout_mode = 2
ignore_texture_size = true
stretch_mode = 4

[node name="AvatarButton5" type="TextureButton" parent="ScrollContainer/AvatarGrid"]
custom_minimum_size = Vector2(480, 480)
layout_mode = 2
ignore_texture_size = true
stretch_mode = 4

[node name="AvatarButton6" type="TextureButton" parent="ScrollContainer/AvatarGrid"]
custom_minimum_size = Vector2(480, 480)
layout_mode = 2
ignore_texture_size = true
stretch_mode = 4

[node name="AvatarButton7" type="TextureButton" parent="ScrollContainer/AvatarGrid"]
custom_minimum_size = Vector2(480, 480)
layout_mode = 2
ignore_texture_size = true
stretch_mode = 4

[node name="AvatarButton8" type="TextureButton" parent="ScrollContainer/AvatarGrid"]
custom_minimum_size = Vector2(480, 480)
layout_mode = 2
ignore_texture_size = true
stretch_mode = 4

[node name="ReturnButton" type="Button" parent="."]
custom_minimum_size = Vector2(240, 120)
layout_mode = 2
offset_right = 8.0
offset_bottom = 8.0
theme = ExtResource("2_38lr4")
text = "Return"
